[gd_scene load_steps=11 format=3 uid="uid://nal10k0gnepr"]

[ext_resource type="Script" path="res://menu/end_screen.gd" id="1_emmhs"]
[ext_resource type="Texture2D" uid="uid://yt7p0xsom8gw" path="res://menu/background.png" id="1_swxx7"]
[ext_resource type="FontFile" uid="uid://borjaoyu7d5g0" path="res://menu/LilitaOne-Regular.ttf" id="2_c03g1"]
[ext_resource type="Texture2D" uid="uid://coxc3itu7nbib" path="res://menu/tablero.png" id="3_xeu4b"]
[ext_resource type="Texture2D" uid="uid://w1q3m7wxejmm" path="res://menu/post-it.png" id="4_u0iud"]
[ext_resource type="Theme" uid="uid://pes6ughwlfan" path="res://menu/tema.tres" id="6_2v1dr"]
[ext_resource type="Texture2D" uid="uid://bcnx46nlngsur" path="res://assets/fry.png" id="6_hcsui"]
[ext_resource type="AudioStream" uid="uid://c8rgp0cakq4yt" path="res://sonidos/Victoria.mp3" id="8_bxiyn"]
[ext_resource type="AudioStream" uid="uid://baou5lc78a0ti" path="res://sonidos/derrrota.mp3" id="9_pops5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yodge"]
texture = ExtResource("3_xeu4b")

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emmhs")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(634, 358)
texture = ExtResource("1_swxx7")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.0
offset_top = 60.0
offset_right = 217.0
offset_bottom = 163.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_c03g1")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxTexture_yodge")
text = "Puntuación Final"
horizontal_alignment = 1
vertical_alignment = 1

[node name="postit" type="Sprite2D" parent="."]
position = Vector2(650, 431)
texture = ExtResource("4_u0iud")

[node name="Fry" type="Sprite2D" parent="."]
position = Vector2(170, 350)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_hcsui")
flip_h = true

[node name="Fry2" type="Sprite2D" parent="."]
position = Vector2(1100, 350)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_hcsui")

[node name="Puntuacion" type="Label" parent="."]
layout_mode = 0
offset_left = 415.0
offset_top = 235.0
offset_right = 865.0
offset_bottom = 450.0
theme = ExtResource("6_2v1dr")
theme_override_font_sizes/font_size = 110
text = "12.345"
horizontal_alignment = 1
vertical_alignment = 1

[node name="puntos" type="Label" parent="."]
layout_mode = 0
offset_left = 415.0
offset_top = 379.0
offset_right = 865.0
offset_bottom = 594.0
theme = ExtResource("6_2v1dr")
theme_override_font_sizes/font_size = 110
text = "Puntos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Jugar" type="Button" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 513.0
offset_right = 324.0
offset_bottom = 640.0
theme = ExtResource("6_2v1dr")
theme_override_font_sizes/font_size = 35
text = "Volver 
a Jugar"

[node name="Menu" type="Button" parent="."]
layout_mode = 0
offset_left = 981.0
offset_top = 526.0
offset_right = 1184.0
offset_bottom = 576.0
theme = ExtResource("6_2v1dr")
theme_override_font_sizes/font_size = 25
text = "Menú"

[node name="Salir" type="Button" parent="."]
layout_mode = 0
offset_left = 981.0
offset_top = 595.0
offset_right = 1181.0
offset_bottom = 639.0
theme = ExtResource("6_2v1dr")
theme_override_font_sizes/font_size = 25
text = "Salir"

[node name="sonido_victoria" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_bxiyn")

[node name="sonido_derrota" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_pops5")

[connection signal="pressed" from="Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Salir" to="." method="_on_salir_pressed"]
